--- a/cat-dev/deeptools.yml
+++ b/cat-dev/deeptools.yml
@@ -1,4 +1,10 @@
 tools:
+- name: deeptools_bigwig_compare
+  owner: bgruening
+  revisions:
+  - 71aa86af6762
+  tool_panel_section_label: DeepTools
+  tool_shed_url: toolshed.g2.bx.psu.edu
 - name: deeptools_bam_pe_fragmentsize
   owner: bgruening
   revisions:
