--- a/galaxy-cat/gemini_tools.yml
+++ b/galaxy-cat/gemini_tools.yml
@@ -23,3 +23,21 @@ tools:
   - 62647e2637f6
   tool_panel_section_label: Gemini Tools
   tool_shed_url: toolshed.g2.bx.psu.edu
+- name: gemini_db_info
+  owner: iuc
+  revisions:
+  - bc8b01d1b496
+  tool_panel_section_label: Gemini Tools
+  tool_shed_url: toolshed.g2.bx.psu.edu
+- name: gemini_de_novo
+  owner: iuc
+  revisions:
+  - 9db3e299b1c8
+  tool_panel_section_label: Gemini Tools
+  tool_shed_url: toolshed.g2.bx.psu.edu
+- name: gemini_dump
+  owner: iuc
+  revisions:
+  - 96a2d270bf0f
+  tool_panel_section_label: Gemini Tools
+  tool_shed_url: toolshed.g2.bx.psu.edu
