--- a/galaxy-cat/gemini_tools.yml
+++ b/galaxy-cat/gemini_tools.yml
@@ -41,3 +41,9 @@ tools:
   - 96a2d270bf0f
   tool_panel_section_label: Gemini Tools
   tool_shed_url: toolshed.g2.bx.psu.edu
+- name: gemini_gene_wise
+  owner: iuc
+  revisions:
+  - 4b26f6c99227
+  tool_panel_section_label: Gemini Tools
+  tool_shed_url: toolshed.g2.bx.psu.edu
