--- a/galaxy-cat/gemini_tools.yml
+++ b/galaxy-cat/gemini_tools.yml
@@ -47,3 +47,9 @@ tools:
   - 4b26f6c99227
   tool_panel_section_label: Gemini Tools
   tool_shed_url: toolshed.g2.bx.psu.edu
+- name: gemini_load
+  owner: iuc
+  revisions:
+  - b2c25142267e
+  tool_panel_section_label: Gemini Tools
+  tool_shed_url: toolshed.g2.bx.psu.edu
