--- a/cat-dev/gemini_tools.yml
+++ b/cat-dev/gemini_tools.yml
@@ -47,6 +47,12 @@ tools:
   - 4b26f6c99227
   tool_panel_section_label: Gemini Tools
   tool_shed_url: toolshed.g2.bx.psu.edu
+- name: gemini_lof_sieve
+  owner: iuc
+  revisions:
+  - 295814260d95
+  tool_panel_section_label: Gemini Tools
+  tool_shed_url: toolshed.g2.bx.psu.edu
 - name: gemini_qc
   owner: iuc
   revisions:
