--- a/galaxy-cat/statistics.yml
+++ b/galaxy-cat/statistics.yml
@@ -11,6 +11,12 @@ tools:
   - 1f8ee7f9701b
   tool_panel_section_label: Statistics
   tool_shed_url: toolshed.g2.bx.psu.edu
+- name: datamash_ops
+  owner: iuc
+  revisions:
+  - 562f3c677828
+  tool_panel_section_label: Statistics
+  tool_shed_url: toolshed.g2.bx.psu.edu
 - name: dwt_cor_ava_perclass
   owner: devteam
   revisions:
