--- a/cat-dev/emboss.yml
+++ b/cat-dev/emboss.yml
@@ -1,7 +1,7 @@
 tools:
-- name: ncbi_blast_plus
+- name: emboss_5
   owner: devteam
   revisions:
-  - e25d3acf6e68
-  tool_panel_section_label: Blast +
+  - dba489bfcd62
+  tool_panel_section_label: EMBOSS
   tool_shed_url: toolshed.g2.bx.psu.edu
