--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-STAGING_URL="https://galaxy-aust-staging.genome.edu.au"
-PRODUCTION_URL="https://usegalaxy.org.au"
-STAGING_TOOL_DIR="galaxy-aust-staging"
-PRODUCTION_TOOL_DIR="usegalaxy.org.au"
+STAGING_URL="https://galaxy-cat.genome.edu.au"
+PRODUCTION_URL="https://cat-dev.genome.edu.au"
+STAGING_TOOL_DIR="galaxy-cat"
+PRODUCTION_TOOL_DIR="cat-dev"
