--- a/galaxy-cat/assembly.yml
+++ b/galaxy-cat/assembly.yml
@@ -1,4 +1,11 @@
 tools:
+- name: unicycler
+  owner: iuc
+  revisions:
+  - 88c240872a65
+  tool_panel_section_id: assembly
+  tool_panel_section_label: Assembly
+  tool_shed_url: toolshed.g2.bx.psu.edu
 - name: velvetoptimiser
   owner: simon-gladman
   revisions:
