--- a/jenkins/requirements.txt
+++ b/jenkins/requirements.txt
@@ -1,5 +1,6 @@
+
 pyyaml
-ephemeris==0.10.5
+-e git+https://github.com/cat-bro/ephemeris.git@use_get_tools_instead_of_get_tool_panel_to_find_tool_ids#egg=ephemeris
 bioblend==0.13.0
 planemo==0.70.0
 
