--- a/galaxy-cat/convert_formats.yml
+++ b/galaxy-cat/convert_formats.yml
@@ -1,7 +1,8 @@
 tools:
-- name: bed_to_protein_map
-  owner: galaxyp
+- name: fml_gff3togtf
+  owner: vipints
   revisions:
-  - 024ed7b0ad93
+  - 5c6f33e20fcc
+  tool_panel_section_id: convert
   tool_panel_section_label: Convert Formats
   tool_shed_url: toolshed.g2.bx.psu.edu
