--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: bash ../.travis/travis.sh
+      run: bash .travis/travis.sh
