--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,35 +9,44 @@ on:
     branches: [ master ]
 
 # # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-# jobs:
-#   # This workflow contains a single job called "build"
-#   build:
-#     # The type of runner that the job will run on
-#     runs-on: ubuntu-latest
-# 
-#     # Steps represent a sequence of tasks that will be executed as part of the job
-#     steps:
-#     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-#     - uses: actions/checkout@v2
-# 
-#     # Runs a single command using the runners shell
-#     - name: Run a one-line script
-#       run: bash .travis/travis.sh
-
 jobs:
+  # This workflow contains a single job called "build"
   build:
-
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    # strategy:
-    #   matrix:
-    #     python-version: [3.7]
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    - name: Dump GitHub context
-      env:
-        GITHUB_CONTEXT: ${{ toJson(github) }}
-      run: echo "$GITHUB_CONTEXT"
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.5
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pyyaml bioblend
+        # if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    # Run check files script
+    - name: Run a one-line script
+      run: bash .travis/travis.sh
+
+# jobs:
+#   build:
+# 
+#     runs-on: ubuntu-latest
+#     # strategy:
+#     #   matrix:
+#     #     python-version: [3.7]
+# 
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Dump GitHub context
+#       env:
+#         GITHUB_CONTEXT: ${{ toJson(github) }}
+#       run: echo "$GITHUB_CONTEXT"
     # 
     # - name: Set up Python ${{ matrix.python-version }}
     #   uses: actions/setup-python@v2
