--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,11 +34,11 @@ jobs:
       env:
         GITHUB_CONTEXT: ${{ toJson(github.event.pull_request) }}
       run: echo "$GITHUB_CONTEXT"
-    # - name: Run a one-line script
-    #   env:
-    #     TARGET_HEAD: ${{ toJson(github) }}
-    #     PULL_REQUEST_HEAD: ${{ toJson(github) }}
-    #   run: bash .travis/travis.sh
+    - name: Run script to check request files
+      env:
+        TARGET_HEAD: ${{ toJson(github) }}
+        PULL_REQUEST_HEAD: ${{ toJson(github) }}
+      run: bash .travis/travis.sh
 
 # jobs:
 #   build:
