--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,8 @@ jobs:
     - name: Run script to check request files
       env:
         PULL_REQUEST_BASE: ${{ github.event.pull_request.base.sha }}
-        PULL_REQUEST_HEAD: ${{ github.event.pull_request.head.sha }}
+        TARGET_BRANCH: master
+        # PULL_REQUEST_HEAD: ${{ github.event.pull_request.head.sha }}
       run: bash .travis/travis.sh
 
 # jobs:
