--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
       env:
         PULL_REQUEST_BASE: ${{ github.event.pull_request.base.sha }}
         TARGET_BRANCH: master
-        # PULL_REQUEST_HEAD: ${{ github.event.pull_request.head.sha }}
+        PULL_REQUEST_HEAD: ${{ github.event.pull_request.head.sha }}
       run: bash .travis/travis.sh
 
 # jobs:
