--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-        ref: ${{ github.event.pull_request.head.ref }}
+        # ref: ${{ github.event.pull_request.head.ref }}
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
@@ -36,11 +36,15 @@ jobs:
       env:
         GITHUB_CONTEXT: ${{ toJson(github.event.pull_request) }}
       run: echo "$GITHUB_CONTEXT"
+    # - name: Set commit range (pull request)
+    #   if: github.event_name == 'pull_request'
+    #   run: echo ::set-env name=COMMIT_RANGE::"HEAD~.."
     - name: Run script to check request files
       env:
         PULL_REQUEST_BASE: ${{ github.event.pull_request.base.sha }}
         TARGET_BRANCH: origin/master
         PULL_REQUEST_HEAD: ${{ github.event.pull_request.head.sha }}
+        COMMIT_RANGE: "HEAD~.."
       run: bash .travis/travis.sh
 
 # jobs:
